<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_movie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Fila con la imagen de la película y botones -->
    <LinearLayout
        android:id="@+id/linearLayoutImageButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <!-- Imagen de la película -->
        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/tigre"
            android:contentDescription="Imagen del cartel" />

        <!-- Botones para tomar o seleccionar imagen -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_take_photo"
                android:backgroundTint="#D6D7D7"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_select_image"
                android:backgroundTint="#D6D7D7"
                android:textColor="#000000"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Campo de texto para el título de la película -->
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutImageButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo de texto para el director -->
    <EditText
        android:id="@+id/editTextDirector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_director"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo de texto para el año de estreno -->
    <EditText
        android:id="@+id/editTextReleaseYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_year"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/editTextDirector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo de texto para el enlace a IMDB -->
    <EditText
        android:id="@+id/editTextIMDBLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_imdb_link"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/editTextReleaseYear"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Spinner para el género -->
    <Spinner
        android:id="@+id/spinnerGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextIMDBLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:entries="@array/genre_array"
        android:prompt="@string/genre_prompt"/>

    <!-- Spinner para el formato -->
    <Spinner
        android:id="@+id/spinnerFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:entries="@array/format_array"
        android:prompt="@string/format_prompt"/>

    <!-- Área de texto para notas -->
    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_notes"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/spinnerFormat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <!-- Botones para guardar y cancelar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/editTextNotes">

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/btn_cancel"
            android:backgroundTint="#D6D7D7"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:backgroundTint="#D6D7D7"
            android:textColor="#000000"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
